--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project">
-        <activity android:name=".user_profile.Register"></activity>
+        <activity android:name=".MainMenu"></activity>
+        <activity android:name=".user_profile.Register" />
         <activity android:name=".user_profile.Login" />
         <activity android:name=".MainActivity">
             <intent-filter>
