--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project">
-        <activity android:name=".user_profile.PasswordReset"></activity>
+        <activity android:name=".user_profile.Settings"></activity>
+        <activity android:name=".user_profile.PasswordReset" />
         <activity android:name=".MainMenu" />
         <activity android:name=".user_profile.Register" />
         <activity android:name=".user_profile.Login" />
