--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project">
+        <activity android:name=".picturebook.NewPicturebook"></activity>
         <activity android:name=".user_profile.ChangePassword" />
         <activity android:name=".user_profile.Settings" />
         <activity android:name=".user_profile.PasswordReset" />
