--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
+
+    // dependencies for glide
+    //implementation 'com.github.bumptech.glide:glide:4.13.0'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
