--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project">
-        <activity android:name=".user_profile.ChangeProfilePicture"></activity>
-        <activity android:name=".user_profile.ChangePassword" />
-        <activity android:name=".user_profile.Settings" />
+        <activity android:name=".user_profile.ChangeProfilePicture"
+            android:parentActivityName=".user_profile.Settings" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.project.user_profile.Settings"/>
+        </activity>
+
+        <activity android:name=".user_profile.ChangePassword"
+            android:parentActivityName=".user_profile.Settings" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.project.user_profile.Settings"/>
+        </activity>
+
+        <activity android:name=".user_profile.Settings"
+            android:parentActivityName=".MainMenu">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.project.MainMenu"/>
+        </activity>
+
         <activity android:name=".user_profile.PasswordReset" />
         <activity android:name=".MainMenu" />
         <activity android:name=".user_profile.Register" />
