--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project">
 
-        <activity android:name=".picturebook.NewPicturebook"></activity>
+        <activity android:name=".picturebook.NewPicturebook"
+            android:parentActivityName=".MainMenu" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.project.MainMenu"/>
+        </activity>
         
         <activity android:name=".user_profile.ChangeProfilePicture"
             android:parentActivityName=".user_profile.Settings" >
