--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,7 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.github.QuadFlask:colorpicker:0.0.15'
+    implementation 'com.google.android.material:material:1.1.0-alpha10'
 
 }
