--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project">
-        <activity android:name=".archive.SinglePicturebook"
+        <activity
+            android:name=".archive.SinglePicturebook"
             android:parentActivityName=".archive.MyArchive">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
