--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project">
-        <activity android:name=".archive.EditPages"></activity>
+        <activity
+            android:name=".review.WriteReview"
+            android:exported="false"
+            android:parentActivityName=".explore.ExploreSinglePicturebook">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.project.explore.ExploreSinglePicturebook" />
+        </activity>
+        <activity android:name=".archive.EditPages" />
         <activity
             android:name=".explore.ExploreSinglePicturebook"
             android:exported="false"
+            android:launchMode="singleTask"
             android:parentActivityName=".explore.Explore">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
